# monitor

./: Cargo.toml  README.md  test
src/: disks_info.rs  main.rs  main.rs.ori  memory_info.rs  net_info.rs  process_info.rs
src/handlers/: all.rs  cpu.rs  disk.rs  load.rs  mem.rs  mod.rs  network.rs  process.rs  process.rs.ori  swap.rs  uptime.rs
src/tmp/: main.rs.ok.tmp  main.rs.orig.tmp  sysinfo.rs.tmp
