[package]
name = "server_monitor"
version = "0.2.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
sysinfo = "0.24"
daemonize = "0.5"
